tdf#124162: Crash when trying to accept changes

Change-Id: If4a4034a891d6539b183f6083c0711b05ef7692d
Reviewed-on: https://gerrit.libreoffice.org/69441
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>