sw/source/uibase/uiview/view.cxx
@@ -1698,10 +1698,10 @@ void SwView::Notify( SfxBroadcaster& rBC, const SfxHint& rHint )
             case SfxHintId::RedlineChanged:
                 {
                     static sal_uInt16 const aSlotRedLine[] = {
-                        FN_REDLINE_NEXT_CHANGE,
-                        FN_REDLINE_PREV_CHANGE,
                         FN_REDLINE_ACCEPT_DIRECT,
                         FN_REDLINE_REJECT_DIRECT,
+                        FN_REDLINE_NEXT_CHANGE,
+                        FN_REDLINE_PREV_CHANGE,
                         FN_REDLINE_ACCEPT_ALL,
                         FN_REDLINE_REJECT_ALL,
                         0
